# bmp-viewer

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  bmp.c  bmp.h  main.c  utils.c  utils.h
include/: bmp.h
include/math/: geometry.h
include/ui/: ui.h  ui_button.h  ui_context.h  ui_utils.h
src/: bmp.c
src/math/: geometry.c
src/ui/: ui.c
